# research-pr-food

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  devenv.nix  main.py  pyproject.toml  release.sh  requirements.txt
.forgejo/workflows/: publish.yaml
docs/: abstract.tex
notebooks/: scratch.ipynb
src/data/: data_process.py
src/prfood_repl/: __init__.py  data_process.py
