[project]
name = "prfood_repl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
    "censusforge>=1.0.0",
    "geopandas>=1.1.3",
    "jp-qcew>=3.2.2",
    "jp-tools>=0.7.7",
    "libpysal>=4.14.1",
    "numpy>=2.4.6",
    "polars>=1.41.2",
]

[project.scripts]
research-pr-food = "prfood_repl:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pynvim>=0.6.0",
]
